<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="InputDialogBinding"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/instructions_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number_instructions"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_card" />


        <androidx.cardview.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_imageView"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondary"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:background="@drawable/round_outline"
                android:clipToOutline="true"
                android:src="@drawable/baseline_local_phone_64"
                app:srcCompat="@drawable/baseline_local_phone_64" />
        </androidx.cardview.widget.CardView>


        <EditText

            android:id="@+id/data_input_editText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="phone"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:maxWidth="480dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_textView"
            app:layout_constraintWidth_max="480dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/confirm_input_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@android:string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/data_input_editText" />

        <Button
            android:id="@+id/cancel_input_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_input_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>